--- a/add-city.html
+++ b/add-city.html
@@ -7,12 +7,14 @@
     <title>Clima App</title>
     <!-- Estilos CSS -->
     <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/pages/add-city.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
     <header>
         <h1>
+            <img src="img/logo.png" alt="logo">
             <span>Clima App</span>
         </h1>
         <nav>
@@ -30,9 +32,14 @@
             <form action="">
                 <label for="addcity">Ingrese la ciudad a agregar:</label>
                 <input type="text" name="cityadded" id="cityadded"><br>
-                <input type="button" value="Agregar">
+                <input type="button" class="button" id="addcity" value="Agregar">
             </form>
         </section>
+        <div class="messages">
+            <p id="success">Ciudad agregada con éxito.</p>
+            <p id="error">Error: La ciudad ingresada no se cuentra en la API o se produjo un error al consultar.</p>
+            <p id="warning">La ciudad ingresada ya se encuentra almacenada.</p>
+        </div>
     </main>
     <footer>
         <p>
