--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <title>Clima App</title>
     <!-- Estilos CSS -->
     <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/pages/index.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
     <header>
         <h1>
+            <img src="img/logo.png" alt="logo">
             <span>Clima App</span>
         </h1>
         <nav>
@@ -28,11 +30,11 @@
         <h2>El Clima Ahora</h2>
         <section id="form-city-list">
             <select name="selectcity" id="selectcity">
-                <option value="Seleccionar ciudad"  -value="" -disabled -selected>Seleccionar ciudad</option>
-                <option value="Rosario" -value="ROSARIO" id="Rosario">Rosario</option>
-                <option value="Rafaela" -value="RAFAELA" id="Rafaela">Rafaela</option>
+                <option value="Seleccionar ciudad" -disabled>Seleccionar ciudad</option>
+                <option value="Rosario" id="Rosario" -selected>Rosario</option>
+                <option value="Rafaela" id="Rafaela">Rafaela</option>
             </select>
-            <input type="button" value="Consultar">
+            <button class="button">Consultar</button>
         </section>
         <section id="section-weather-result">
             <div class="card">
