--- a/help.html
+++ b/help.html
@@ -9,6 +9,29 @@
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/pages/help.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <script src="js/common.js" defer></script>
+    <script src="js/pages/help.js" defer></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function() {
+            emailjs.init('d7tThim7PTOcV8lFr');
+        })();
+    </script>
+    <script type="text/javascript">
+        window.onload = function() {
+            document.getElementById('contact-form').addEventListener('send', function(event) {
+                event.preventDefault();
+                this.contact_number.value = Math.random() * 100000 | 0;
+                emailjs.sendForm('contact_service', 'contact_form', this)
+                    .then(function() {
+                        alert('La consulta se ha enviado correctamente.');
+                    }, function(error) {
+                        alert('Ha habido un error.', error);
+                    });
+            });
+        }
+    </script>
+
 </head>
 
 <body>
@@ -31,19 +54,20 @@
         <p>Esta App te permite consultar el clima de una ciudad en particular utilizando la API de <a href="https://openweathermap.org/api" target="_blank">OpenWeatherMap</a>.</p>
         <p>Para poder consultar el clima, primero deberá <a href="add-city.html">Agregar una ciudad</a> y luego seleccionar la ciudad en cuestión desde la página <a href="index.html">Clima</a>.</p>
         <section>
-            <form action="">
+            <form id="contact-form">
+                <input type="hidden" name="contact_number">
                 <label for="nombre">Nombre:</label>
-                <input type="text">
+                <input type="text" name="user_name">
                 <br>
                 <label for="email">E-Mail:</label>
-                <input type="email">
+                <input type="email" name="user_email">
                 <br>
-                <label for="mensaje">Mensaje:</label>
-                <textarea name="mensaje" id="mensaje" cols="30" rows="10"></textarea>
+                <label for="menssage">Mensaje:</label>
+                <textarea name="menssage" id="menssage" cols="30" rows="10"></textarea>
                 <br>
                 <div class="buttons">
-                    <button class="button">Limpiar</button>
-                    <button class="button">Enviar</button>
+                    <button class="button" id="clean">Limpiar</button>
+                    <button class="button" id="send">Enviar</button>
                 </div>
             </form>
         </section>
