--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/pages/index.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <script src="js/common.js" defer></script>
+    <script src="js/pages/index.js" defer></script>
 </head>
 
 <body>
@@ -29,23 +31,15 @@
     <main>
         <h2>El Clima Ahora</h2>
         <section id="form-city-list">
-            <select name="selectcity" id="selectcity">
-                <option value="Seleccionar ciudad" -disabled>Seleccionar ciudad</option>
-                <option value="Rosario" id="Rosario" -selected>Rosario</option>
-                <option value="Rafaela" id="Rafaela">Rafaela</option>
-            </select>
-            <button class="button">Consultar</button>
+            <!-- Sección donde se debe colocar el formulario, con el select y el botón de consultar -->
+            <form action="">
+                <select name="select-city" id="select-city">
+                    </select>
+                <button type="button" id="consultWeather">Consultar</button>
+            </form>
         </section>
         <section id="section-weather-result">
-            <div class="card">
-                <h3>Rosario</h3>
-                <img src="img/climacity.png" alt="imagenclima">
-                <p>Temperatura: 25.31°</p>
-                <p>Sensación térmica: 24.65°</p>
-                <p>Humedad: 29%</p>
-                <p>Velocidad del viento: 4.63 km/h</p>
-                <p>Presión: 1011 P</p>
-            </div>
+            <!-- Sección donde se debe mostrar el clima de la ciudad -->
         </section>
     </main>
     <footer>
