--- a/help.html
+++ b/help.html
@@ -11,7 +11,26 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <script src="js/common.js" defer></script>
     <script src="js/pages/help.js" defer></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js" defer></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function() {
+            emailjs.init('d7tThim7PTOcV8lFr');
+        })();
+    </script>
+    <script type="text/javascript">
+        window.onload = function() {
+            document.getElementById('contact-form').addEventListener('submit', function(event) {
+                event.preventDefault();
+                this.contact_number.value = Math.random() * 100000 | 0;
+                emailjs.sendForm('contact_service', 'contact_form', this)
+                    .then(function() {
+                        console.log('SUCCESS!');
+                    }, function(error) {
+                        console.log('FAILED...', error);
+                    });
+            });
+        }
+    </script>
 
 </head>
 
@@ -43,8 +62,8 @@
                 <label for="email">E-Mail:</label>
                 <input type="email" name="user_email">
                 <br>
-                <label for="menssage">Mensaje:</label>
-                <textarea name="menssage" id="menssage" cols="30" rows="10"></textarea>
+                <label for="message">Mensaje:</label>
+                <textarea name="message" id="message" cols="30" rows="10"></textarea>
                 <br>
                 <div class="buttons">
                     <button class="button" id="clean">Limpiar</button>
@@ -53,7 +72,7 @@
             </form>
         </section>
         <div class="emailerror">
-            <p>Ingrese un E-Mail válido.</p>
+
         </div>
     </main>
     <footer>
