--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section id="form-city-list">
             <!-- Sección donde se debe colocar el formulario, con el select y el botón de consultar -->
             <form action="">
-                <select name="select-city" id="select-city">
+                <select name="selectCity" id="selectCity">
                     </select>
                 <button type="button" id="consultWeather">Consultar</button>
             </form>
